--- a/index.html
+++ b/index.html
@@ -22,25 +22,6 @@
 					<h1><a href="index.html">Ping</a> by Betty Lam, Rebekah Liu, and Thomas Kilmer</h1>
 					<nav id="nav">
 						<ul>
-							<!-- <li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -51,7 +32,7 @@
 					<p>A privacy-conscious location-sharing mobile app.</p>
 					<ul class="actions">
 						<li><a href="https://github.com/rebekahliu/Ping" class="button special">Github</a></li>
-						<li><a href="#chapter4" class="button">Learn More</a></li>
+						<li><a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Learn More</a></li>
 					</ul>
 				</section>
 
