--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
 							<section>
 								<span class="icon major fa-map-marker accent2"></span>
 								<h3>Instant Location Sharing</h3>
-								<p>Ping automatically updates users location so you can access your friend's location instantly.</p>
+								<p>Ping automatically updates users location so you and your friend's locations are just a ping away.</p>
 							</section>
 							<section>
 								<span class="icon major fa-facebook accent3"></span>
 								<h3>Add Facebook Friends</h3>
-								<p>Automatically imports and suggest Facebook friends who are already on Ping.</p>
+								<p>No need to manually search for friends, Ping automatically imports and suggests Facebook friends who are on the app.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-plus accent4"></span>
-								<h3>Emergency Pings</h3>
-								<p>An emergency ping overrides the set visibility radius.</p>
+								<h3>Custom Pings</h3>
+								<p>You can send customizable pings such as a home ping to check if a family member is at home. A special emergency ping overrides the set visibility radius to allow you to check on the safety of your friend no matter the distance.</p>
 							</section>
 							<section>
 								<span class="icon major fa-comments accent5"></span>
 								<h3>In App Messaging</h3>
-								<p>Make plans with your friends directly in the app.</p>
+								<p>Continue the conversation of where to eat or if someone got home safely directly in the app with in app messaging.</p>
 							</section>
 						</div>
 					</section>
 
-					<div class="row">
+					<!-- <div class="row">
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
@@ -105,38 +105,20 @@
 							</section>
 
 						</div>
-					</div>
+					</div> -->
 
 				</section>
 
 			<!-- CTA -->
 				<section id="cta">
-
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-					<form>
-						<div class="row uniform 50%">
-							<div class="8u 12u(mobilep)">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div>
-							<div class="4u 12u(mobilep)">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
-
+					<h2>Download Ping here</h2>
+					<a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Download</a>
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="https://github.com/rebekahliu/Ping" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
