--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
-					<h2>Ping</h2>
-					<p>A privacy-conscious location-sharing mobile app.</p>
-					<ul class="actions">
-						<li><a href="https://github.com/rebekahliu/Ping" class="button special">Github</a></li>
-						<li><a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Learn More</a></li>
-					</ul>
+				<section id="banner" style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
+						<div>
+							<h2>Ping</h2>
+							<p>A privacy-conscious location-sharing mobile app.</p>
+							<ul class="actions">
+								<li><a href="https://github.com/rebekahliu/Ping" class="button special">Github</a></li>
+								<li><a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div style="margin-left:35px;">
+							<video width="320" height="450" src="assets/IMG_3611.TRIM.MOV" autoplay>
+							</video>
+						</div>
 				</section>
 
 			<!-- Main -->
