--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
+				<section id="banner" style="display:flex; flex-direction:row; justify-content:center; align-items:center; padding-top:5em; padding-bottom:12em;">
 						<div>
 							<h2>Ping</h2>
 							<p>A privacy-conscious location-sharing mobile app.</p>
@@ -36,8 +36,8 @@
 								<li><a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Learn More</a></li>
 							</ul>
 						</div>
-						<div style="margin-left:35px;">
-							<video width="320" height="450" src="assets/IMG_3611.TRIM.MOV" autoplay>
+						<div style="margin-left:70px; padding-bottom:50px;">
+							<video height="550" src="assets/IMG_3611.TRIM.MOV" autoplay>
 							</video>
 						</div>
 				</section>
@@ -48,14 +48,14 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2 style="font-size:24px;">Ping leverages social relationship and trust to allow users to make their location available 24/7 while ensuring that location is only accessed when it matters.</h2>
+							<h2 style="font-size:24px;">Ping makes location sharing easier, faster, and more private, all at once.</h2>
 							<p>The Problem
 								<br /> <br />
-							In our day to day lives, we often find ourselves texting friends asking about location. However, it can often take too long to get a response. We want instant access location to friend location when it matters, but without invading privacy. There's a need for an app that implements general purpose location-sharing without letting others abuse their access.
+							In our day to day lives, we often want instant access to friends' locations, but without invading privacy. There's a need for an app that implements general purpose location-sharing without letting others abuse their access.
 								<br /> <br />
 							Our Solution
 								<br /> <br />
-							Ping is unique in that it allows you access to friend location 24/7, but due to the reciprocal location sharing, users can't abuse the feature, or use it in a creepy way. By alerting people when you've pinged them, Ping makes sure users are only requesting location info when they have good reason to. Reciprocal location sharing also helps speed the process of arranging to meet up somewhere, or coordinate plans in general. Not only does reciprocal location sharing prevent misuse of the app, it's the natural progression of "where are you?" conversations anyways! Ping makes location sharing easier, faster, more accessible, and more private, all at once.</p>
+							Ping allows you to access friends' locations 24/7. But due to the reciprocal location sharing, users can't abuse the feature. By alerting people when you've pinged them, Ping makes sure users are only requesting location info when they have good reason to.</p>
 						</header>
 					</section>
 
@@ -64,7 +64,7 @@
 							<section>
 								<span class="icon major fa-map-marker accent2"></span>
 								<h3>Instant Location Sharing</h3>
-								<p>Ping automatically updates users location so you and your friend's locations are just a ping away.</p>
+								<p>Ping automatically updates user location so you and your friends' locations are just a ping away.</p>
 							</section>
 							<section>
 								<span class="icon major fa-facebook accent3"></span>
@@ -76,12 +76,12 @@
 							<section>
 								<span class="icon major fa-plus accent4"></span>
 								<h3>Custom Pings</h3>
-								<p>You can send customizable pings such as a home ping to check if a family member is at home. A special emergency ping overrides the set visibility radius to allow you to check on the safety of your friend no matter the distance.</p>
+								<p>Send customizable pings such as a "Home" ping to check if a family member is at home.</p>
 							</section>
 							<section>
 								<span class="icon major fa-comments accent5"></span>
-								<h3>In App Messaging</h3>
-								<p>Continue the conversation of where to eat or if someone got home safely directly in the app with in app messaging.</p>
+								<h3>In-App Messaging</h3>
+								<p>Continue the conversation of "where to eat" or "did you get home?" directly with in-app messaging.</p>
 							</section>
 						</div>
 					</section>
@@ -118,7 +118,7 @@
 			<!-- CTA -->
 				<section id="cta">
 					<h2>Download Ping here</h2>
-					<a href="https://expo.io/@tkettle220/ping-flex-project" class="button">Download</a>
+					<a href="https://expo.io/@tkettle220/Ping" class="button">Download</a>
 				</section>
 
 			<!-- Footer -->
